# pineapple-package-manager

./: .gitignore  CMakeLists.txt  LICENSE  README.txt  main.cpp  meson.build
.github/workflows/: windows-msys2.yml
